feat: Enhance admin dashboard with improved data handling and statistics
- Added new dependencies: body-parser, cors, express, firebase-admin
- Improved error handling and loading states in AdminDashboard component
- Implemented data filtering and statistics calculation for attendance
- Enhanced user detail page with better data formatting and error handling
- Refactored API routes for fetching attendance data, ensuring user authorization
- Created new routes for handling user-specific attendance data
- Implemented registration API with Firebase Authentication and Firestore integration
- Added Firebase Admin SDK for server-side operations
- Introduced user verification middleware for secure API access
- Updated user registration form with improved UI and validation

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
+    "body-parser": "^2.2.0",
     "chart.js": "^4.5.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "express": "^5.1.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.5.0",
     "html5-qrcode": "^2.3.8",
     "next": "15.3.4",
     "qrcode": "^1.5.4",
