--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "firebase-admin": "^13.5.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.562.0",
-    "next": "15.3.4",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.7",
